force-app/main/default/objects/PromoRemise__c/PromoRemise__c.object-meta.xml
<CustomObject>
    <label>Remise de promo</label>
    <nameField>
        <displayFormat>rem-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Remises de promo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>