force-app/main/default/objects/PromoRemise__c/fields/Charge2__c.field-meta.xml
<CustomField>
    <fullName>Charge2__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/&quot; &amp; Id &amp; &quot;/view&quot;, Charge__r.Name, &#39;_self&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge de Remise</label>
    <type>Text</type>
</CustomField>