force-app/main/default/objects/PromoRemise__c/fields/DebuteXmois__c.field-meta.xml
<CustomField>
    <fullName>DebuteXmois__c</fullName>
    <label>Débute dans (x mois)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>