force-app/main/default/objects/PromoRemise__c/fields/Montant__c.field-meta.xml
<CustomField>
    <fullName>Montant__c</fullName>
    <label>Montant</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>