force-app/main/default/objects/PromoRemise__c/fields/NombreMensu__c.field-meta.xml
<CustomField>
    <fullName>NombreMensu__c</fullName>
    <label>Nombre de mensualités</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>