force-app/main/default/objects/PromoRemise__c/fields/Promo__c.field-meta.xml
<CustomField>
    <fullName>Promo__c</fullName>
    <label>Promo</label>
    <referenceTo>Promo__c</referenceTo>
    <relationshipLabel>Remises de promo</relationshipLabel>
    <relationshipName>PromoRemises</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>