force-app/main/default/objects/PromoRemise__c/fields/PromoRT__c.field-meta.xml
<CustomField>
    <fullName>PromoRT__c</fullName>
    <formula>Promo__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PromoRT</label>
    <type>Text</type>
</CustomField>