force-app/main/default/objects/PromoRemise__c/recordTypes/Abonnement_de_base.recordType-meta.xml
<RecordType>
    <fullName>Abonnement_de_base</fullName>
    <active>true</active>
    <label>Abonnement de base</label>
</RecordType>