force-app/main/default/objects/PromoRemise__c/recordTypes/Charge_de_base.recordType-meta.xml
<RecordType>
    <fullName>Charge_de_base</fullName>
    <active>true</active>
    <label>Charge de base</label>
</RecordType>