force-app/main/default/objects/PromoRemise__c/recordTypes/Promo_BtoB.recordType-meta.xml
<RecordType>
    <fullName>Promo_BtoB</fullName>
    <active>true</active>
    <label>Promo BtoB</label>
</RecordType>