force-app/main/default/objects/PromoRemise__c/recordTypes/Promo_des_offres.recordType-meta.xml
<RecordType>
    <fullName>Promo_des_offres</fullName>
    <active>true</active>
    <label>Promo des offres</label>
</RecordType>