force-app/main/default/objects/PromoRemise__c/validationRules/Champs_A_Vider_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Champs_A_Vider_2</fullName>
    <active>false</active>
    <errorConditionFormula>AND (Charge__r.FamilleRPC__c = &quot;ABOREM&quot;,  NOT(ISNULL(DebuteXmois__c)))</errorConditionFormula>
    <errorMessage>Certains champs doivent etre vides</errorMessage>
</ValidationRule>