force-app/main/default/objects/PromoRemise__c/validationRules/Champs_Obligatoires.validationRule-meta.xml
<ValidationRule>
    <fullName>Champs_Obligatoires</fullName>
    <active>false</active>
    <description>Les champs ci-dessous sont obligatoires</description>
    <errorConditionFormula>OR(
AND (Charge__r.FamilleRPC__c = &quot;REMMONT&quot;,  ISNULL(DebuteXmois__c)),
AND (Charge__r.FamilleRPC__c = &quot;REMMONT&quot;,  ISNULL( Montant__c )),
AND (Charge__r.FamilleRPC__c = &quot;REMMONT&quot;,  ISNULL( NombreMensu__c)),
AND (Charge__r.FamilleRPC__c = &quot;ABOREM&quot;,  ISNULL( Montant__c )),
AND (Charge__r.FamilleRPC__c = &quot;REMMENS&quot;,  ISNULL( Montant__c )),
AND (Charge__r.FamilleRPC__c = &quot;REMMENS&quot;,  ISNULL( NombreMensu__c)),
AND (Charge__r.FamilleRPC__c = &quot;REMMENS&quot;,  ISNULL( DebuteXmois__c))
)</errorConditionFormula>
    <errorMessage>champs manquant ou obligatoire</errorMessage>
</ValidationRule>